# daily-time-stats

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
docs/: SPEC.md
mockups/: render_stats_mockups.py  render_today_mockup.py
packaging/: control  daily-time-stats.desktop  daily-time-stats.sh
scripts/: build_deb.sh  entrypoint.py
src/daily_time_stats/: app.py  backup.py  constants.py  database.py  stats.py  utils.py
src/daily_time_stats/ui/: charts.py  main_window.py  stats_pages.py  style.py  today_page.py
