[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-time-stats"
version = "0.1.0"
description = "Ubuntu desktop daily time statistics app"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PySide6==6.2.4"]

[project.scripts]
daily-time-stats = "daily_time_stats.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
daily_time_stats = ["assets/*"]
